--- a/site/package.json
+++ b/site/package.json
@@ -1,17 +1,21 @@
 {
   "dependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-react": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "css-loader": "^0.26.1",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "2.0.0-rc.3",
-    "node-sass": "^4.5.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
-    "sass-loader": "^5.0.1",
+    "react-router": "^3.0.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-react": "^6.23.0",
+    "eslint": "^3.16.1",
+    "eslint-loader": "^1.6.3",
+    "eslint-plugin-react": "^6.10.0",
     "webpack": "^2.2.1"
+  },
+  "scripts": {
+    "build": "webpack"
   }
 }
