--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 language: node_js
 cache:
-  directories:
-    - $HOME/.npm
-    - $HOME/.yarn-cache
-    - site/node_modules
+  yarn: true
 node_js:
   - "4"
 before_install:
   - cd site
-  - time npm i -g yarn --cache-min 999999999
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH=$HOME/.yarn/bin:$PATH
 install:
   - time yarn
 script:
