--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,10 @@ install:
   - time yarn
 script:
   - time yarn run prod
+deploy:
+  provider: s3
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
+  bucket: "tubealert.co.uk"
+  skip_cleanup: true
+  local_dir: site/public
