--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
   - time yarn run prod
 deploy:
   provider: s3
+  region: "eu-west-2"
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
   bucket: "tubealert.co.uk"
