--- a/site/package.json
+++ b/site/package.json
@@ -21,6 +21,7 @@
     "eslint-loader": "^1.6.3",
     "eslint-plugin-react": "^6.10.0",
     "extract-text-webpack-plugin": "^2.0.0",
+    "html-webpack-plugin": "^2.28.0",
     "jsdom": "^9.11.0",
     "mocha": "^3.2.0",
     "node-sass": "^4.5.0",
@@ -29,8 +30,7 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.2",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-manifest-plugin": "^1.1.0"
+    "webpack-dev-server": "^2.4.1"
   },
   "scripts": {
     "test": "mocha tests/.setup.js tests/**/*.jsx",
