--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,23 @@ install:
 script:
   - time yarn run prod
 deploy:
-  provider: s3
-  region: "eu-west-2"
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
-  bucket: "tubealert.co.uk"
-  skip_cleanup: true
-  local_dir: public
+  # Deploy the HTML (10 mins lifetime)
+  - provider: s3
+    region: "eu-west-2"
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: "tubealert.co.uk"
+    skip_cleanup: true
+    acl: public_read
+    cache_control: "max-age=600"
+    local_dir: public/html
+  # Deploy the static assets (1 year lifetime)
+  - provider: s3
+    region: "eu-west-2"
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: "tubealert.co.uk"
+    skip_cleanup: true
+    acl: public_read
+    cache_control: "max-age=31536000"
+    local_dir: public/static
