Sort logo assets

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 /**/node_modules
 site/public/html/all.json
 site/public/html/index.html
+site/public/html/manifest.json
+site/public/html/browserconfig.xml
 site/public/static
