--- a/site/package.json
+++ b/site/package.json
@@ -21,6 +21,7 @@
     "eslint-loader": "^1.6.3",
     "eslint-plugin-react": "^6.10.0",
     "extract-text-webpack-plugin": "^2.0.0",
+    "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
     "jsdom": "^9.11.0",
     "mocha": "^3.2.0",
