--- a/site/package.json
+++ b/site/package.json
@@ -4,7 +4,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
-    "react-router": "^3.0.2",
+    "react-router-dom": "^4.0.0",
     "redux": "^3.6.0"
   },
   "devDependencies": {
