--- a/site/package.json
+++ b/site/package.json
@@ -5,6 +5,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0",
+    "react-router-redux": "next",
     "redux": "^3.6.0"
   },
   "devDependencies": {
