Support offline mode

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /**/node_modules
 site/public/html/all.json
 site/public/html/index.html
+site/public/html/assets-manifest.json
 site/public/html/manifest.json
 site/public/html/browserconfig.xml
 site/public/static
