--- a/site/package.json
+++ b/site/package.json
@@ -31,7 +31,8 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.2",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack-dev-server": "^2.4.1",
+    "webpack-manifest-plugin": "^1.1.0"
   },
   "scripts": {
     "test": "mocha tests/.setup.js tests/**/*.jsx",
