--- a/functions/tfl_fetch/package.json
+++ b/functions/tfl_fetch/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "lines": "file:./../../shared/lines/"
+    "moment-timezone": "^0.5.11",
+    "node-fetch": "^1.6.3",
+    "tubealert": "file:./../../shared/tubealert/"
   }
 }
