--- a/serverless.yml
+++ b/serverless.yml
@@ -60,14 +60,14 @@ functions:
           method: get
 
   subscribe:
-    handler: handler.all
+    handler: handler.subscribe
     events:
       - http:
           path: /subscribe
           method: post
 
   unsubscribe:
-    handler: handler.all
+    handler: handler.unsubscribe
     events:
       - http:
           path: /unsubscribe
