--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "dependencies": {
-    "aws-sdk": "^2.41.0",
     "moment-timezone": "^0.5.13",
-    "serverless": "^1.11.0"
+    "node-fetch": "^1.6.3",
+    "web-push": "^3.2.2"
   },
   "devDependencies": {
-    "jest": "^19.0.2"
+    "aws-sdk": "^2.41.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
+    "jest": "^19.0.2",
+    "serverless": "^1.11.0"
   },
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage && eslint src test"
   },
   "jest": {
     "testEnvironment": "node"
