--- a/serverless.yml
+++ b/serverless.yml
@@ -20,9 +20,20 @@ service: tubealert
 provider:
   name: aws
   runtime: nodejs6.10
+#  role: TubeAlertLambdaRole
 
   stage: api
   region: eu-west-2
+
+  environment:
+    TFL_APP_ID: ${env:TFL_APP_ID}
+    TFL_APP_KEY: ${env:TFL_APP_KEY}
+    GCM_API_KEY: ${env:GCM_API_KEY}
+    BUCKET_NAME: ${env:BUCKET_NAME}
+    CONTACT_EMAIL: ${env:CONTACT_EMAIL}
+    STATIC_HOST: ${env:STATIC_HOST}
+    PRIVATE_KEY: ${env:PRIVATE_KEY}
+    PUBLIC_KEY: ${env:PUBLIC_KEY}
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
@@ -40,9 +51,8 @@ provider:
 #            - "Ref" : "ServerlessDeploymentBucket"
 #            - "/*"
 
-# you can define service wide environment variables here
-#  environment:
-#    variable1: value1
+  # you can define service wide environment variables here
+
 
 functions:
   webapp:
@@ -77,6 +87,20 @@ functions:
       handler: handler.fetch
       events:
         - schedule: rate(2 minutes)
+
+  hourly:
+        handler: handler.hourly
+        events:
+          - schedule: cron(1 * * * ? *)
+
+  notify:
+        handler: handler.notify
+        events:
+          - stream:
+            type: dynamodb
+            arn: arn:aws:dynamodb:eu-west-2:323441517494:table/tubealert.co.uk_notifications/stream/2017-04-15T10:21:10.286
+            batchSize: 1
+            startingPosition: LATEST
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
 #      - sns: greeter-topic
@@ -111,10 +135,61 @@ functions:
 #       Description: "Description for the output"
 #       Value: "Some output value"
 
+#resources:
+#  Resources:
+#    TubeAlertLambdaRole:
+#      Type: AWS::IAM::Role
+#      Properties:
+#        RoleName: TubeAlertLambdaRole
+#        AssumeRolePolicyDocument:
+#          Version: '2017'
+#          Statement:
+#            - Effect: Allow
+#              Principal:
+#                Service:
+#                  - lambda.amazonaws.com
+#              Action: sts:AssumeRole
+#        # note that these rights are needed if you want your function to be able to communicate with resources within your vpc
+#        ManagedPolicyArns:
+#          - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
+#        Policies:
+#          - PolicyName: myPolicyName
+#            PolicyDocument:
+#              Version: '2017'
+#              Statement:
+#                - Effect: Allow # note that these rights are given in the default policy and are required if you want logs out of your lambda(s)
+#                  Action:
+#                    - logs:CreateLogGroup
+#                    - logs:CreateLogStream
+#                    - logs:PutLogEvents
+#                  Resource:
+#                    - 'Fn::Join':
+#                      - ':'
+#                      -
+#                        - 'arn:aws:logs'
+#                        - Ref: 'AWS::Region'
+#                        - Ref: 'AWS::AccountId'
+#                        - 'log-group:/aws/lambda/*:*:*'
+#                -  Effect: "Allow"
+#                   Action:
+#                     - "dynamodb:ListBucket"
+#                     - "dynamodb:BatchGetItem"
+#                     - "dynamodb:BatchWriteItem"
+#                     - "dynamodb:DeleteItem"
+#                     - "dynamodb:DescribeStream"
+#                     - "dynamodb:GetItem"
+#                     - "dynamodb:GetRecords"
+#                     - "dynamodb:GetShardIterator"
+#                     - "dynamodb:ListStreams"
+#                     - "dynamodb:ListTables"
+#                     - "dynamodb:PutItem"
+#                     - "dynamodb:Query"
+#                     - "dynamodb:Scan"
+#                     - "dynamodb:UpdateItem"
+#                   Resource: "*"
+
 package:
   exclude:
-    - build/**
-    - functions/**
     - infrastructure/**
-    - shared/**
     - site/**
+    - tests/**
