--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   },
   "devDependencies": {
     "aws-sdk": "^2.41.0",
-    "eslint": "^3.19.0",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2 || ^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
     "jest": "^19.0.2",
     "serverless": "^1.11.0"
   },
   "scripts": {
-    "test": "jest --coverage && eslint src test"
-  },
+    "test": "jest --coverage && echo 'Running eslint...' && eslint *.js src tests"
+},
   "jest": {
     "testEnvironment": "node"
   }
