--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,16 @@ node_js:
   - "6"
 before_install:
 #  - cd site
-  - curl -o- -L https://yarnpkg.com/install.sh | bash
-  - export PATH=$HOME/.yarn/bin:$PATH
+#  - curl -o- -L https://yarnpkg.com/install.sh | bash
+#  - export PATH=$HOME/.yarn/bin:$PATH
 install:
-  - time yarn
+  - yarn
 script:
-  - time yarn test
-#  - time yarn run prod
-  - time rm -rf ./node_modules
-  - time yarn install --production
-#  - time yarn serverless deploy
+  - yarn test
+#  - yarn run prod
+  - rm -rf ./node_modules
+  - yarn install --production
+#  - yarn serverless deploy
 #deploy:
 #  # Deploy the HTML (10 mins lifetime)
 #  - provider: s3
