--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,10 @@ cache:
   yarn: true
 node_js:
   - "6"
-before_install:
-#  - cd site
-#  - curl -o- -L https://yarnpkg.com/install.sh | bash
-#  - export PATH=$HOME/.yarn/bin:$PATH
-install:
-  - yarn
-  - serverless
 script:
+  - yarn install
   - yarn test
-#  - yarn run prod
-  - rm -rf ./node_modules
-  - yarn install --production
+  - yarn install --production --ignore-scripts --prefer-offline
   - ./script/deploy.sh
 #  - yarn serverless deploy
 #deploy:
