--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ deploy:
   # Deploy the static assets (1 year lifetime)
   - provider: s3
     region: $AWS_REGION
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY
+    access_key_id: $AWS_ACCESS_KEY_ID
+    secret_access_key: $AWS_SECRET_ACCESS_KEY
     bucket: $STATIC_BUCKET
     skip_cleanup: true
     acl: public_read
