--- a/package.json
+++ b/package.json
@@ -2,21 +2,48 @@
   "dependencies": {
     "moment-timezone": "^0.5.13",
     "node-fetch": "^1.6.3",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "web-push": "^3.2.2"
   },
   "devDependencies": {
     "aws-sdk": "^2.41.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "css-loader": "^0.28.0",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
+    "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2 || ^4.0.0",
     "eslint-plugin-react": "^6.9.0",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "file-loader": "^0.10.1",
+    "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
-    "serverless": "^1.11.0"
+    "node-sass": "^4.5.0",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "sass-loader": "^6.0.2",
+    "serverless": "^1.11.0",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-manifest-plugin": "^1.1.0"
   },
   "scripts": {
-    "test": "jest --coverage && echo 'Running eslint...' && eslint *.js src tests"
-},
+    "test": "jest --coverage",
+    "server": "webpack-dev-server --config webpack/webpack.dev.config.js",
+    "dev": "webpack --config webpack/webpack.dev.config.js",
+    "build": "webpack --config webpack/webpack.build.config.js",
+    "prod": "webpack --config webpack/webpack.prod.config.js"
+  },
   "jest": {
     "testEnvironment": "node"
   }
