--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "extends": ["airbnb"],
   "env": {
-    "jest": true
+    "jest": true,
+    "browser": true
   },
   "rules": {
     "comma-dangle": [
@@ -10,6 +11,14 @@
         "arrays": "only-multiline",
         "objects": "only-multiline",
         "functions": "never"
+      }
+    ],
+    "import/extensions": [
+      "error",
+      "never",
+      {
+        "json": "always",
+        "jsx": "always"
       }
     ]
   }
