--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,15 @@ deploy:
     local_dir: build/static
     on:
       branch: serverless
+  # Deploy the static assets (10 mins lifetime)
+  - provider: s3
+      region: $AWS_REGION
+      access_key_id: $AWS_ACCESS_KEY_ID
+      secret_access_key: $AWS_SECRET_ACCESS_KEY
+      bucket: $STATIC_BUCKET
+      skip_cleanup: true
+      acl: public_read
+      cache_control: "max-age=600"
+      local_dir: build/static-low-cache
+      on:
+        branch: serverless
