Pre-build JSX and ES6 for lamba

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
 script:
   - yarn install
   - yarn test
+  - yarn build
   - yarn prod
   - yarn install --production --ignore-scripts --prefer-offline
   - serverless deploy
