Disable linting that isn't working (for now)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
         "jsx": "always"
       }
     ],
-    "react/no-unused-prop-types": [0]
+    "react/no-unused-prop-types": [0],
+    "react/forbid-prop-types": [0],
+    "react/jsx-no-bind": [0]
   }
 }
