--- a/serverless.yml
+++ b/serverless.yml
@@ -279,14 +279,14 @@ resources:
                 - '/sw.js'
           IntegrationResponses:
             - StatusCode: 200
-              ResponseParameters:
-                method.response.header.Content-Type: 'integration.response.header.Content-Type'
-                method.response.header.Content-Length: 'integration.response.header.Content-Length'
+#              ResponseParameters:
+#                method.response.header.Content-Type: 'integration.response.header.Content-Type'
+#                method.response.header.Content-Length: 'integration.response.header.Content-Length'
         MethodResponses:
           - StatusCode: 200
-#            ResponseParameters:
-#              method.response.header.Content-Type: true
-#              method.response.header.Content-Length: true
+            ResponseParameters:
+              method.response.header.Content-Type: true
+              method.response.header.Content-Length: true
         ResourceId:
           Ref: ServiceWorkerAPI
         RestApiId:
