--- a/serverless.yml
+++ b/serverless.yml
@@ -284,9 +284,8 @@ resources:
                 - '/sw.js'
           IntegrationResponses:
             - StatusCode: 200
-#              ResponseParameters:
-#                'method.response.header.Content-Type': integration.response.header.Content-Type
-#                'method.response.header.Content-Length': integration.response.header.Content-Length
+              ResponseParameters:
+                method.response.header.Content-Type: 'application/javascript'
         ResourceId:
           Ref: ServiceWorkerAPI
         RestApiId:
