--- a/serverless.yml
+++ b/serverless.yml
@@ -268,7 +268,6 @@ resources:
           - StatusCode: 200
             ResponseParameters:
               method.response.header.Content-Type: true
-              method.response.header.Content-Length: true
         Integration:
           Type: 'AWS'
           IntegrationHttpMethod: 'GET'
@@ -284,9 +283,8 @@ resources:
                 - '/sw.js'
           IntegrationResponses:
             - StatusCode: 200
-              responseParameters:
+              ResponseParameters:
                 method.response.header.Content-Type: 'integration.response.header.Content-Type'
-                method.response.header.Content-Length: 'integration.response.header.Content-Length'
         ResourceId:
           Ref: ServiceWorkerAPI
         RestApiId:
