Restore standard yaml

--- a/serverless.yml
+++ b/serverless.yml
@@ -283,7 +283,8 @@ resources:
                 - '/sw.js'
           IntegrationResponses:
             - StatusCode: 200
-              ResponseParameters: { method.response.header.Content-Type: integration.response.header.Content-Type }
+              ResponseParameters:
+                method.response.header.Content-Type: integration.response.header.Content-Type
         ResourceId:
           Ref: ServiceWorkerAPI
         RestApiId:
