Move things around to see if that helps

--- a/serverless.yml
+++ b/serverless.yml
@@ -269,6 +269,10 @@ resources:
             ResponseParameters:
               method.response.header.Content-Type: true
         Integration:
+          IntegrationResponses:
+            - StatusCode: 200
+              ResponseParameters:
+                method.response.header.Content-Type: integration.response.header.Content-Type
           Type: 'AWS'
           IntegrationHttpMethod: 'GET'
           Credentials:
@@ -281,10 +285,6 @@ resources:
                 - ':s3:path/'
                 - Ref: StaticBucket
                 - '/sw.js'
-          IntegrationResponses:
-            - StatusCode: 200
-              ResponseParameters:
-                - method.response.header.Content-Type: integration.response.header.Content-Type
         ResourceId:
           Ref: ServiceWorkerAPI
         RestApiId:
