Fix the version of serverless as the new one may be buggy

--- a/serverless.yml
+++ b/serverless.yml
@@ -267,12 +267,12 @@ resources:
         MethodResponses:
           - StatusCode: 200
             ResponseParameters:
-              "method.response.header.Content-Type": true
+              method.response.header.Content-Type: true
         Integration:
           IntegrationResponses:
             - StatusCode: 200
               ResponseParameters:
-                "method.response.header.Content-Type": integration.response.header.Content-Type
+                method.response.header.Content-Type: integration.response.header.Content-Type
           Type: 'AWS'
           IntegrationHttpMethod: 'GET'
           Credentials:
