--- a/src/webapp/templates/manifest.json
+++ b/src/webapp/templates/manifest.json
@@ -1,5 +1,6 @@
 {
     "name": "TubeAlert",
+    "short_name": "TubeAlert",
     "icons": [
         {
             "src": "<%= require('../../imgs/android-chrome-192x192.png') %>",
