--- a/serverless.yml
+++ b/serverless.yml
@@ -2,7 +2,7 @@ service: tubealert
 
 provider:
   name: aws
-  runtime: nodejs8.10
+  runtime: nodejs10.x
   deploymentBucket: hammerspace-serverless-applications
   cfnRole: arn:aws:iam::323441517494:role/cloudformation
   stage: api
