--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "moment-timezone": "^0.5.13",
     "node-fetch": "^1.6.3",
+    "prettier": "^1.19.1",
     "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -20,13 +21,6 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.28.0",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2 || ^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
@@ -40,6 +34,7 @@
   },
   "scripts": {
     "test": "jest --coverage",
+    "pretty": "prettier --write '{src,tests}/**/*.{js,jsx}'",
     "server": "webpack-dev-server --config webpack/webpack.dev.config.js",
     "dev": "webpack --config webpack/webpack.dev.config.js",
     "build": "webpack --config webpack/webpack.build.config.js",
@@ -48,5 +43,9 @@
   },
   "jest": {
     "testEnvironment": "node"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "printWidth": 120
   }
 }
